objects/zkups__UPSShipment__c.object
<CustomObject>
    <customHelpPage>zkups__shipmentHelp</customHelpPage>
    <description>UPS Shipment is a collection of data that represents the details of the UPS shipment</description>
    <fields>
        <fullName>Entity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Entity associated with the shipment</description>
        <label>Entity</label>
        <referenceTo>Entities__c</referenceTo>
        <relationshipLabel>UPS Shipments</relationshipLabel>
        <relationshipName>UPS_Shipments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Tracking_Number_ShipDate_Hidden__c</fullName>
        <description>SCH-0001</description>
        <formula>zkups__MasterTrackingId__c +&apos;(&apos;+TEXT(MONTH(DATEVALUE (CreatedDate) ))+&quot;/&quot; +TEXT(DAY(DATEVALUE ( CreatedDate) ))+&quot;/&quot; +TEXT(YEAR(DATEVALUE ( CreatedDate )))+&apos;)&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Tracking Number+ShipDate</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UPS_Tracking_Mirror__c</fullName>
        <formula>zkups__MasterTrackingId__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>UPS Tracking Mirror</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkups__ActualDeliveryDate__c</fullName>
        <label>Actual Delivery Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>zkups__AlternateCity__c</fullName>
        <label>Alternate City</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkups__AlternateCountry__c</fullName>
        <label>Alternate Country</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkups__AlternateName__c</fullName>
        <label>Alternate Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkups__AlternatePhone__c</fullName>
        <label>Alternate Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>zkups__AlternateStateProvince__c</fullName>
        <label>Alternate State/Province</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkups__AlternateStreet__c</fullName>
        <label>Alternate Street</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>zkups__AlternateZipPostalCodeExt__c</fullName>
        <label>Alternate Zip/Postal Code Ext</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkups__AlternateZipPostalCode__c</fullName>
        <label>Alternate Zip/Postal Code</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkups__Carrier__c</fullName>
        <label>Carrier</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>UPS</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>zkups__Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>UPS Shipments</relationshipLabel>
        <relationshipName>UPS_Shipments_del</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>zkups__CostCenter__c</fullName>
        <description>Customer assigned identifier for report and billing summarization, it is displayed to the right of the Cost Center title</description>
        <label>CostCenter</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkups__Currency__c</fullName>
        <label>Currency</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkups__DeliveredTo__c</fullName>
        <label>Delivered To</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkups__Delivered__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Delivered</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zkups__DimensionUnits__c</fullName>
        <label>Dimension Units</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>IN</fullName>
                </value>
                <value>
                    <fullName>CM</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>zkups__DocumentsOnly__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Documents Only</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zkups__DutiesAccountPostalCode__c</fullName>
        <label>Duties Account Postal Code</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkups__DutiesPaymentType__c</fullName>
        <description>Payment Type:
SENDER: Your Account
RECIPIENT: The other party
THIRD_PARTY: Third Party</description>
        <inlineHelpText>Payment Type:
SENDER: Your Account
RECIPIENT: The other party
THIRD_PARTY: Third Party</inlineHelpText>
        <label>Duties/Taxes/Fees Payment Type</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkups__DutiesPayorAccountCountry__c</fullName>
        <label>Duties Payor Account Country</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkups__DutiesPayorAccount__c</fullName>
        <label>Duties/Taxes/Fees Payor Account</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkups__EMailMessage__c</fullName>
        <label>Email Message</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>zkups__EMailNotifyOnDeliveryAlso__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Email Notify on Delivery</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zkups__EMailNotifyOnExceptionAlso__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Email Notify on Exception</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zkups__EMailRecipient1__c</fullName>
        <label>Email Recipient 1</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>zkups__EMailRecipient2__c</fullName>
        <label>Email Recipient 2</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>zkups__EMailRecipient3__c</fullName>
        <label>Email Recipient 3</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>zkups__ExportDate__c</fullName>
        <label>Export Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>zkups__FirstReferenceTypeName__c</fullName>
        <label>First Reference Type Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkups__FirstReferenceType__c</fullName>
        <label>First Reference Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkups__FirstReferenceValue__c</fullName>
        <label>First Reference Value</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkups__InvoiceLineTotal__c</fullName>
        <description>The Invoice Line Total. If a Commercial Invoice form is submitted electronically, this value is calculated from it. If the Invoice is submitted outside of the app, the invoice line total value must be provided manually.</description>
        <inlineHelpText>The Invoice Line Total. If a Commercial Invoice form is submitted electronically, this value is calculated from it. If the Invoice is submitted outside of the app, the invoice line total value must be provided manually.</inlineHelpText>
        <label>Invoice Line Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>zkups__LabelImageType__c</fullName>
        <label>Label Image Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>GIF</fullName>
                </value>
                <value>
                    <fullName>Thermal 4x6 - EPL2</fullName>
                </value>
                <value>
                    <fullName>Thermal 4x6 - ZPL</fullName>
                </value>
                <value>
                    <fullName>Thermal 4x8 - EPL2</fullName>
                </value>
                <value>
                    <fullName>Thermal 4x8 - ZPL</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>zkups__LabelInsertedEvent__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used for update shipment process builder, if value is true - label was inserted</description>
        <label>Label Inserted Event</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zkups__LastTrackUSPSUpdateStatusCode__c</fullName>
        <label>Last Track USPS Update Status Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkups__LastTrackUpdateTime__c</fullName>
        <label>Last Track Update Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>zkups__MasterTrackingId__c</fullName>
        <label>UPS Tracking Number</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkups__ModKey__c</fullName>
        <label>Mod Key</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkups__NegotiatedRatesGrandTotal__c</fullName>
        <label>Negotiated Rates Grand Total</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>zkups__NegotiatedRatesMessage__c</fullName>
        <label>Negotiated Rates Message</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkups__NonMachineable__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Non Machineable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zkups__Notes__c</fullName>
        <label>Shipment Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>zkups__OverridePaperlessInvoicing__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Override Paperless Invoicing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zkups__PackageId__c</fullName>
        <description>Customer-assigned unique piece identifier that returns visibility events</description>
        <label>PackageId</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkups__PartialCommercialInvoice__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Partial Commercial Invoice. Valid only for Return service shipments only.</description>
        <inlineHelpText>Partial Commercial Invoice. Valid only for Return service shipments only.</inlineHelpText>
        <label>Partial Commercial Invoice</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zkups__PaymentType__c</fullName>
        <description>Payment Type:
SENDER: Your Account
RECIPIENT: The other party
THIRD_PARTY: Third Party</description>
        <inlineHelpText>Payment Type:
SENDER: Your Account
RECIPIENT: The other party
THIRD_PARTY: Third Party</inlineHelpText>
        <label>Payment Type</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkups__PayorAccountCountry__c</fullName>
        <label>Payor Account Country</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkups__PayorAccountPostalCode__c</fullName>
        <label>Payor Account Postal Code</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkups__PayorAccount__c</fullName>
        <label>Payor Account</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkups__RecipientAccount__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The account the shipment is being sent to.</description>
        <label>Recipient Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>UPS Shipments</relationshipLabel>
        <relationshipName>UPS_Shipments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>zkups__RecipientCity__c</fullName>
        <label>Recipient City</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkups__RecipientCompany__c</fullName>
        <label>Recipient Company</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkups__RecipientContact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Recipient Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>UPS Shipments</relationshipLabel>
        <relationshipName>UPS_Shipments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>zkups__RecipientCountry__c</fullName>
        <label>Recipient Country</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkups__RecipientEmail__c</fullName>
        <label>Recipient Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>zkups__RecipientIsResidential__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Recipient Is Residential</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zkups__RecipientLead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Recipient Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>UPS Shipments</relationshipLabel>
        <relationshipName>UPS_Shipments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>zkups__RecipientName__c</fullName>
        <label>Recipient Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkups__RecipientOpportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Recipient Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>UPS Shipments</relationshipLabel>
        <relationshipName>UPS_Shipments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>zkups__RecipientPhone__c</fullName>
        <label>Recipient Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>zkups__RecipientPostalCode__c</fullName>
        <label>Recipient Zip/Postal Code</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkups__RecipientState__c</fullName>
        <label>Recipient State/Province</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkups__RecipientStreet__c</fullName>
        <label>Recipient Street</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>zkups__ReferenceBarCode__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Reference Bar Code</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zkups__ScheduledDeliveryDate__c</fullName>
        <label>Scheduled Delivery Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>zkups__SecondReferenceTypeName__c</fullName>
        <label>Second Reference Type Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkups__SecondReferenceType__c</fullName>
        <label>Second Reference Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkups__SecondReferenceValue__c</fullName>
        <label>Second Reference Value</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkups__SenderCity__c</fullName>
        <label>Sender City</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkups__SenderCompany__c</fullName>
        <label>Sender Company</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkups__SenderCountry__c</fullName>
        <label>Sender Country</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkups__SenderEmail__c</fullName>
        <label>Sender Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>zkups__SenderIsResidential__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sender Is Residential</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zkups__SenderName__c</fullName>
        <label>Sender Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkups__SenderPhone__c</fullName>
        <label>Sender Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>zkups__SenderPostalCode__c</fullName>
        <label>Sender Postal Code</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkups__SenderState__c</fullName>
        <label>Sender State</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkups__SenderStreet__c</fullName>
        <label>Sender Street</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>zkups__ServiceOptionCharges__c</fullName>
        <label>Service Option Charges</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>zkups__ServiceTypeName__c</fullName>
        <label>Service Type Name</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkups__ServiceType__c</fullName>
        <label>Service Type</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkups__ShipmentDeleted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Shipment Deleted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zkups__ShipmentDescription__c</fullName>
        <description>Required for International Shipments. Limited to 35 characters.</description>
        <inlineHelpText>Required for International Shipments. Limited to 35 characters.</inlineHelpText>
        <label>Description of Goods</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkups__ShipmentIndicationType__c</fullName>
        <label>Shipment Indication Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkups__ShipmentProcessingCompleted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Shipment Processing Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zkups__ShipmentType__c</fullName>
        <label>Shipment Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkups__SignedForBy__c</fullName>
        <label>Signed For By</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkups__SsProcessReturnShipment__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Return Shipment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zkups__StatusDescription__c</fullName>
        <label>Status Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkups__TotalCharges__c</fullName>
        <label>Total Charges</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>zkups__TransportationCharges__c</fullName>
        <label>Transportation Charges</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>zkups__UPSCO__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Generates a Certificate of Origin based upon the commodities associated with the shipment.</description>
        <inlineHelpText>Generates a Certificate of Origin based upon the commodities associated with the shipment.</inlineHelpText>
        <label>UPS Certificate Of Origin</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zkups__UPSCommercialInvoice__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>UPS Commercial Invoice</label>
        <referenceTo>zkups__UPSCommercialInvoice__c</referenceTo>
        <relationshipLabel>UPS Shipments</relationshipLabel>
        <relationshipName>UPSShipments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>zkups__UPSNAFTACO__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>UPS NAFTA CO</label>
        <referenceTo>zkups__UPSNAFTACO__c</referenceTo>
        <relationshipLabel>UPS Shipments</relationshipLabel>
        <relationshipName>UPSShipments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>zkups__UPSPickup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>UPS Pickup</label>
        <referenceTo>zkups__UPSPickup__c</referenceTo>
        <relationshipLabel>UPS Shipments</relationshipLabel>
        <relationshipName>UPSShipments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>zkups__UPSSEDForm__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>UPS SED Form</label>
        <referenceTo>zkups__UPSSEDForm__c</referenceTo>
        <relationshipLabel>UPS Shipments</relationshipLabel>
        <relationshipName>UPSShipments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>zkups__UPSShipmatePreference__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>UPS Shipmate Preference</label>
        <referenceTo>zkups__UPSShipmatePreference__c</referenceTo>
        <relationshipLabel>UPS Shipments</relationshipLabel>
        <relationshipName>UPS_Shipments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>zkups__USPSEndorsement__c</fullName>
        <label>USPS Endorsement</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkups__USPSPICNumber__c</fullName>
        <description>USPSPICNumber is USPS Package Identification; it should be used for tracking Mail Innovations shipments</description>
        <inlineHelpText>USPSPICNumber is USPS Package Identification; it should be used for tracking Mail Innovations shipments</inlineHelpText>
        <label>USPSPICNumber</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkups__UserAllowedEditOfRecipientInfo__c</fullName>
        <defaultValue>false</defaultValue>
        <label>User Allowed Edit of Recipient Info</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zkups__WeightUnits__c</fullName>
        <label>Weight Units</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>KGS</fullName>
                </value>
                <value>
                    <fullName>LBS</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>UPS Shipment</label>
    <listViews>
        <fullName>Nolan_Daigle_UPSShipment</fullName>
        <filterScope>Queue</filterScope>
        <label>Nolan Daigle</label>
        <queue>Nolan_Daigle</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Tina</fullName>
        <columns>NAME</columns>
        <columns>zkups__MasterTrackingId__c</columns>
        <columns>zkups__RecipientName__c</columns>
        <columns>zkups__RecipientEmail__c</columns>
        <columns>zkups__Notes__c</columns>
        <columns>zkups__ServiceTypeName__c</columns>
        <columns>zkups__StatusDescription__c</columns>
        <columns>zkups__ActualDeliveryDate__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>zkups__NegotiatedRatesGrandTotal__c</columns>
        <columns>zkups__Delivered__c</columns>
        <columns>zkups__RecipientStreet__c</columns>
        <columns>zkups__RecipientCity__c</columns>
        <columns>zkups__RecipientState__c</columns>
        <columns>zkups__RecipientPostalCode__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATEDBY_USER</field>
            <operation>contains</operation>
            <value>Herman</value>
        </filters>
        <label>Tina</label>
    </listViews>
    <listViews>
        <fullName>zkups__All</fullName>
        <columns>NAME</columns>
        <columns>zkups__Notes__c</columns>
        <columns>zkups__MasterTrackingId__c</columns>
        <columns>zkups__LastTrackUpdateTime__c</columns>
        <columns>zkups__ShipmentDeleted__c</columns>
        <columns>zkups__Delivered__c</columns>
        <columns>zkups__StatusDescription__c</columns>
        <columns>zkups__ActualDeliveryDate__c</columns>
        <columns>zkups__LabelImageType__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>UPS-Shipment-{0000000000}</displayFormat>
        <label>UPS Shipment Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>UPS Shipments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>